Простейшие тесты для проекта